--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 </ul>
   </div>
   <div class="row">
-            <div class="col-6">
-              <div class="clearfix weather-temperature">
+            <div class="col-md-6">
+              
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
                   <strong id="temperature"></strong
-                  ><span class="units"> °C</span>
+                  ><span class="units"> 12 °C | °F</span>
                 </div>
-              </div>
+              
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span> m/h</li>
+                <li>Humidity:  <span id="humidity"></span>75%</li>
+                <li>Wind: <span id="wind"></span>2m/h</li>
               </ul>
             </div>
           </div>
