--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
 <body>
   <div class="container">
+    <div class="weather-app-wrapper">
+        <div class="weather-app">
 <h1>New York</h1>
 <ul>
     <li>Friday 11:30</li>
@@ -38,6 +41,8 @@
                 <li>Wind: <span id="wind"></span>2m/h</li>
               </ul>
             </div>
+          </div>
+          </div>
           </div>
         </div>
         <small>
