--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
@@ -17,28 +18,31 @@
   <div class="container">
     <div class="weather-app-wrapper">
         <div class="weather-app">
-<h1>New York</h1>
+<h1 id="city"></h1>
 <ul>
     <li>Friday 11:30</li>
-    <li>
+    <li id="description">
         clear
     </li>
 </ul>
   </div>
   <div class="row">
-            <div class="col-md-6">
-              
+            < <div class="col-6">
+              <div class="clearfix weather-temperature">
                 <img src="" alt="Clear" id="icon" class="float-left" />
                 <div class="float-left">
-                  <strong id="temperature"></strong
-                  ><span class="units"> 12 °C | °F</span>
+                 <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </div>
-              
+              </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity:  <span id="humidity"></span>75%</li>
-                <li>Wind: <span id="wind"></span>2m/h</li>
+                <li>Humidity:  <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>m/h</li>
               </ul>
             </div>
           </div>
