--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="weather-app">
 <h1 id="city"></h1>
 <ul>
-    <li>Friday 11:30</li>
+    <li>Last updated at: <span id="date"></span></li>
     <li id="description">
         clear
     </li>
@@ -42,7 +42,7 @@
             <div class="col-6">
               <ul>
                 <li>Humidity:  <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind"></span>m/h</li>
+                <li>Wind: <span id="wind"></span> Km/H</li>
               </ul>
             </div>
           </div>
