Added weather forecast html and css

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
               </div>
             </div>
           </form>
+ <div class="overview">
 <h1 id="city"></h1>
 <ul>
     <li>Last updated at: <span id="date"></span></li>
-    <li id="description">
-        clear
-    </li>
+    <li id="description"></li>
 </ul>
   </div>
   <div class="row">
@@ -67,6 +66,22 @@
             </div>
           </div>
           </div>
+          </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thurs</div>
+                 <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  width="42"
+                />
+                <div class="weather-forecast-temp">
+                  <span class="weather-forecast-temp-max">18°</span>
+                  <span class="weather-forecast-temp-min"> 12°</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <small>
