--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </div>
             </div>
           </form>
- <div class="overview">
+ <div class="overview"></div>
 <h1 id="city"></h1>
 <ul>
     <li>Last updated at: <span id="date"></span></li>
@@ -67,7 +67,7 @@
           </div>
           </div>
           </div>
-          <div class="weather-forecast">
+          <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">Thurs</div>
